src/test/deca/context/invalid/provided/invalide_09_ops_logiques.deca
// Description : test 1 des operations logiques invalides

// Sortie : 
// ERROR  A MODIFIER

{
    int a;
    flaot b;
    a = a && b;

}